--- a/1082-NPeasy/Lab1/.env
+++ b/1082-NPeasy/Lab1/.env
@@ -1,5 +1,4 @@
 BBS_SERVER_IP=localhost
-BBS_SERVER_PORT=8000
-BBS_MAX_CLIENT=20
+BBS_SERVER_DEFAULT_PORT=8000
 DB_ROOT_USERNAME=root
 DB_ROOT_PWD=root
