--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ boto3 = "^1.13.22"
 SQLAlchemy = "^1.3.17"
 python-dotenv = "^0.13.0"
 mysqlclient = "^1.4.6"
+kafka-python = "^2.0.1"
 
 [tool.poetry.dev-dependencies]
 
